--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,36 @@
-aiogram
-aiohttp
-aioredis
-python-dotenv
-loguru
-peewee
-aiohttp_socks
-oauth2client
-google-api-python-client
-
+aiogram==2.11.2
+aiohttp==3.7.3
+aiohttp-socks==0.5.5
+aioredis==1.3.1
+async-timeout==3.0.1
+attrs==20.3.0
+Babel==2.9.0
+cachetools==4.1.1
+certifi==2020.11.8
+chardet==3.0.4
+google-api-core==1.23.0
+google-api-python-client==1.12.8
+google-auth==1.23.0
+google-auth-httplib2==0.0.4
+googleapis-common-protos==1.52.0
+hiredis==1.1.0
+httplib2==0.18.1
+idna==2.10
+loguru==0.5.3
+multidict==4.7.6
+oauth2client==4.1.3
+peewee==3.14.0
+protobuf==3.14.0
+psycopg2-binary==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+python-dotenv==0.15.0
+python-socks==1.1.1
+pytz==2020.4
+requests==2.25.0
+rsa==4.6
+six==1.15.0
+typing-extensions==3.7.4.3
+uritemplate==3.0.1
+urllib3==1.26.2
+yarl==1.6.3
