--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ aioschedule==0.5.2
 async-timeout==3.0.1
 attrs==20.3.0
 Babel==2.9.0
+beautifulsoup4==4.9.3
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
@@ -22,9 +23,11 @@ multidict==5.1.0
 oauth2client==4.1.3
 packaging==20.9
 peewee==3.14.4
+prettytable==2.1.0
 protobuf==3.15.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pylovepdf==1.3.2
 pyparsing==2.4.7
 python-dotenv==0.16.0
 python-socks==1.2.4
@@ -32,7 +35,9 @@ pytz==2021.1
 requests==2.25.1
 rsa==4.7.2
 six==1.15.0
+soupsieve==2.2.1
 typing-extensions==3.7.4.3
 uritemplate==3.0.1
 urllib3==1.26.4
+wcwidth==0.2.5
 yarl==1.6.3
